--- a/client/src/pages/facilities/facilities.css
+++ b/client/src/pages/facilities/facilities.css
@@ -138,6 +138,28 @@
   text-align:center;
 }
 
+.facility__pic-responsive {
+  transform: scale(0.8);
+  opacity: 0;
+  transition: transform 0.5s linear, opacity 0.5s linear;
+}
+
+.facility__pic-responsive.fade-in {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.facilityText__animation{
+  transform: scale(0.7);
+  opacity: 0;
+  transition: transform 0.2s linear, opacity .2s linear;
+}
+
+.facilityText__animation.fade-in {
+  transform: scale(1);
+  opacity: 1;
+}
+
 @media (prefers-reduced-motion: no-preference){
     
   /* .facility__pic-responsive{
